[package]
name = "ragtag"
version = "0.0.1"
edition = "2018"
authors = ["AlexandraAlter"]
description = "In-filesystem tagging of files, backed by a database"
readme = "README.md"
license-file = "LICENSE.txt"
categories = ["command-line-utilities", "filesystem"]

[dependencies]

[lib]
name = "ragtag"

[[bin]]
name = "tag"

